--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,11 +86,13 @@
 
 .firstBlock__input {
 	width: 230px;
-	height: 30px;
-	border-radius: 10px;
-	border: 0.3px lightgrey solid;
-	font-family: "Nunito-Regular";
-	margin-right: 10px;
+    height: 30px;
+    border-radius: 10px;
+    border: 1px lightgrey solid;
+    font-family: "Nunito-Regular";
+    margin-right: 10px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .firstBlock__button {
@@ -195,4 +197,8 @@
 	justify-content: center;
 	align-items: center;
 	left: 45%;
+}
+
+.section{
+	opacity: 0;
 }
